--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -2,25 +2,60 @@
     margin: 40px auto 0;
     width: 75%;
     min-height: 500px;
-    background: #48392A;
+    background: rgb(30, 30, 37);
 }
 
 .app h2 {
-    color: #FBF2C0;
+    color: white;
     padding: 50px 0 20px;
     text-align: center;
+    font-size: 2.3rem;
 }
 
 .todoform-container {
-    background: yellow;
-    height: 80px;
+    /* background: yellow; */
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.todoform-container input{
+    margin: 20px 0;
+    font-size: 1rem;
+    width: 280px;
+    height: 20px;
+    padding: 10px;
+    background: none;
+    border: none;
+    border-bottom: 2px solid #FF1053;
+    color: white;
+
+} 
+
+.todoform-container button {
+    width: 300px;
+    height: 50px;
+    margin-bottom: 20px;
+    font-size: 1rem;
+    border-radius: 20px;
+    border: 3px solid rgb(8, 8, 109);
+    color: #FF1053;
+    background: white;
+}
+
+.todoform-container button:hover {
+    background: #FF1053;
+    color: white;
 }
 
 .todolist-container {
     background: white;
+    border: 4px solid rgb(8, 8, 109);
     border-radius: 20px;
     margin: 0 5% 5%;
     display: flex;
+    justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
 }
@@ -28,23 +63,24 @@
 /* nested in todolist-container ultimately... these are flex items */
 .item { 
     font-size: 1.2rem;
-    width: 40%;
+    width: 35%;
     height: auto;
     padding: 5px;
     margin: 20px;
-    color: #FBF2C0;
-    background: rgb(8, 8, 109);
+    background: #E4D9FF;
+    color: rgb(8, 8, 109);
+    border: 3px solid #FF1053;
     border-radius: 20px;
     text-align: center;
 
 }
 
 .item:hover {
-    background: #840032;
+    background: #FF1053;
 }
 
 .item.completed {
-    color: #E59500;
-    background: #840032;
+    color: rgb(8, 8, 109);
+    background: #FF1053;
     text-decoration: line-through;
 }
