--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -6,6 +6,7 @@
     /* background-image: linear-gradient(rgb(30, 30, 37) 50%, white); */
     background: linear-gradient(110deg, rgb(30, 30, 37) 60%, #ffed4b 60%);
     border-radius: 20px;
+    box-shadow: 3px 5px black;
 }
 
 .app h2 {
@@ -13,6 +14,8 @@
     padding: 50px 0 20px;
     text-align: center;
     font-size: 2.3rem;
+    font-family: sans-serif;
+    font-weight: 1;
 }
 
 .todoform-container {
@@ -42,9 +45,10 @@
     margin-bottom: 20px;
     font-size: 1rem;
     border-radius: 20px;
-    border: 3px solid rgb(8, 8, 109);
+    border: 1px solid rgb(8, 8, 109);
     color: #FF1053;
     background: white;
+    box-shadow: 1px 1px black;
 }
 
 .todoform-container button:hover {
@@ -54,13 +58,14 @@
 
 .todolist-container {
     background: white;
-    border: 4px solid rgb(8, 8, 109);
+    /* border: 2px solid rgb(8, 8, 109); */
     border-radius: 20px;
     margin: 0 5% 5%;
     display: flex;
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
+    box-shadow: 4px 3px gray;
 }
 
 /* nested in todolist-container ultimately... these are flex items */
